// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon External icon 1`] = `
"<article>
  <h1 class=\\"title\\">Icon</h1>
  <section>
    <p>
      <amp-img src=\\"https://scrapbox.io/api/pages/icons/hr/icon\\" layout=\\"fill\\" alt=\\"icon\\" class=\\"normal-icon\\"></amp-img>
    </p>
  </section>
</article>"
`;

exports[`icon Simple icon 1`] = `
"<article>
  <h1 class=\\"title\\">Icon</h1>
  <section>
    <p>
      <amp-img src=\\"https://scrapbox.io/api/pages/projectName/progfay/icon\\" layout=\\"fill\\" alt=\\"icon\\" class=\\"normal-icon\\"></amp-img>
    </p>
  </section>
</article>"
`;
